syntax = "proto3";

package com.sen.proto;

option java_package = "com.sen.proto";
option java_outer_classname = "StudentProto";
option java_multiple_files = true;

service StudentService{
  rpc GetRealNameByUsername(MyRequest) returns (MyResponse){}

  rpc GetUsersByAge(StudentRequest) returns (stream StudentResponse){}

  rpc GetUsersByAges(stream StudentRequest) returns (StudentList){}
}

message MyRequest {
  string username = 1;
}

message MyResponse {
  string realname = 1;
}

message StudentRequest{
  int32 age = 1;
}

message StudentResponse{
  string username = 1;
  int32 age = 2;
  string city = 3;
}

message StudentList{
  StudentResponse list = 1;
}